# alertme

./: .env.example  .gitignore  README.md  action_log_result.json  async_playwright_runner.py  codegen.py  drivergen.py  extract_from_response.py  langchain_codegen.py  langgraph.json  langgraph_utils.py  main.py  playwright_runner.py  prepare_request.py  prompts.py  pyproject.toml  requirements.txt  tennis_task.py  utils.py  web_driver_test.py  web_utils.py
code_generators/: html_parser_generator.py  playwright_generator_main.py
data/: example2.har  example3.har  langchain_trace.txt  main_trace.txt  request.json  request.txt  request2.json  request_output.json  request_output.txt  request_test1.json  request_text.txt  response.txt  response2.txt  response_test_cases.json  response_test_cases.txt  response_text.txt  succesful_func.txt  successful_request_replace_func.py  successful_request_trace.txt  successful_response_func.py
deprecated/: drivergen.py  main.py  playwright_generator_main.py
deprecated/generalizer/: codegen.py  generalize_actions.py
generalizer/: codegen.py  generalize_actions.py
successful_runs/: successful_request_func_trace.txt  successful_run_example2.txt  successful_run_example3.txt  sucessful_run_example.txt
tests/: util_tests.py  web_driver_test.py
web_voyager/: .env-example  code_converter.py  main.py  mark_page.js  playwright_actions.py  playwright_actions_core.py  playwright_utils.py  prompt.py  replay_actions.py  utils.py
web_voyager/rpa/: ai_generated_rpa.py  run_generated_rpa.py
web_voyager/tasks/: tennis_task.py
(+23 files in other folders)
